<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IRWidget</string>
    <string name="action_learn">学习</string><string name="action_showlearned">我的遥控</string><string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_license">证书</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="power">Power</string>
    <string name="input">Source</string>
    <string name="vol_up">Vol+</string>
    <string name="vol_down">Vol-</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">Home Page</string>
    <string name="app_license_bsd">Copyright (c) 2013, Jordan Fish&lt;br>
        &#169; 2014, &lt;a href="mailto:arris@zsolttech.com?subject=IRWidget">Ser Lev Arris&lt;/a>&lt;br>
All rights reserved.&lt;br>
Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;br>
&lt;ul>
&lt;li>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;/li>
&lt;li>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;/li>
&lt;li>Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.&lt;/li>
&lt;/ul>
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    
    <string name="command_learn">88</string>
    <string name="command_emmit_learn">86</string>
    <string name="command_download_emmit">89</string>
    <string name="command_export">8A</string>
    <string name="guide_begin">Begin</string>
    <string name="welcome">开始使用</string>
    <string name="begin_learn">去学习</string>
    <string name="begin_match">去匹配</string>
    <string name="no_data">没有遥控！</string>
    <string name="next">下一步</string>
    <string name="remoter_type">遥控类型：</string>
    <string name="remoter_name">遥控名称：</string>
    <string-array name="remoter_types">
        <item >电视</item>
        <item >空调</item>
        <item >机顶盒</item>
        <item >其他</item>
    </string-array>
    <string name="EXTRE_SELECT_REMOTER_TYPE">extra_select_remoter_type</string>
    <string name="EXTRA_REMOTER_NAME">extra_remoter_name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
     <string name="green_dot">greendot</string>
      <string name="purple_dot">purpledot</string>

</resources>
